--- a/gallery-image-4-cols-fullwidth.html
+++ b/gallery-image-4-cols-fullwidth.html
@@ -650,16 +650,13 @@
 						<div class="divider-45"></div>
 
 						<div class="col-md-12 text-center">
-							<h1 class="bold">Gallery: Images in 4 columns - Fullwidth</h1>
+							<h1 class="bold">Gallery</h1>
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item">
-									<a href="index-2.html">Home</a>
-								</li>
-								<li class="breadcrumb-item">
-									<a href="#">Pages</a>
+									<a href="index.html">Home</a>
 								</li>
 								<li class="breadcrumb-item active">
-									Gallery: Images in 4 columns - Fullwidth
+									Gallery
 								</li>
 							</ol>
 						</div>
@@ -677,19 +674,6 @@
 						<div class="d-none d-lg-block divider-30"></div>
 
 						<div class="col-lg-12">
-							<div class="row justify-content-center">
-								<div class="col-md-10 col-xl-8">
-									<div class="filters gallery-filters small-text text-lg-right">
-										<a href="#" data-filter="*" class="active selected">All</a>
-										<a href="#" data-filter=".corporate">Corporate</a>
-										<a href="#" data-filter=".business">Business</a>
-										<a href="#" data-filter=".entertainment">Entertainment</a>
-										<a href="#" data-filter=".innovations">Innovations</a>
-										<a href="#" data-filter=".news">News</a>
-									</div>
-								</div>
-							</div>
-
 
 							<div class="row isotope-wrapper masonry-layout c-gutter-5 c-mb-5" data-filters=".gallery-filters">
 
