--- a/pricing.html
+++ b/pricing.html
@@ -43,66 +43,12 @@
 	</div>
 
 	<!-- search modal -->
-	<div class="modal" tabindex="-1" role="dialog" aria-labelledby="search_modal" id="search_modal">
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-		<div class="widget widget_search">
-			<form method="get" class="searchform search-form" action="https://html.modernwebtemplates.com/">
-				<div class="form-group">
-					<input type="text" value="" name="search" class="form-control" placeholder="Search keyword" id="modal-search-input">
-				</div>
-				<button type="submit" class="btn">Search</button>
-			</form>
-		</div>
-	</div>
 
-	<!-- Unyson messages modal -->
-	<div class="modal fade" tabindex="-1" role="dialog" id="messages_modal">
-		<div class="fw-messages-wrap ls p-normal">
-			<!-- Uncomment this UL with LI to show messages in modal popup to your user: -->
-			<!--
-		<ul class="list-unstyled">
-			<li>Message To User</li>
-		</ul>
-		-->
 
-		</div>
-	</div><!-- eof .modal -->
 
 	<!-- wrappers for visual page editor and boxed version of template -->
 	<div id="canvas">
 		<div id="box_wrapper">
-
-			<!-- template sections -->
-
-
-			<!--topline section visible only on small screens|-->
-			<section class="page_topline ds ms s-borderbottom c-my-10 d-lg-none">
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-8 text-left">
-							<span class="social-icons">
-
-								<a href="#" class="fa fa-facebook " title="facebook"></a>
-								<a href="#" class="fa fa-twitter " title="twitter"></a>
-								<a href="#" class="fa fa-google " title="google"></a>
-
-							</span>
-						</div>
-						<div class="col-4 text-right">
-							<!--modal search-->
-							<span>
-								<a href="#" class="search_modal_button">
-									<i class="fa fa-search"></i>
-								</a>
-							</span>
-
-						</div>
-					</div>
-				</div>
-			</section>
-			<!--eof topline-->
 
 			<!-- header with three Bootstrap columns - left for logo, center for navigation and right for includes-->
 			<header class="page_header ds ms justify-nav-center s-pt-10 s-pb-10">
@@ -124,7 +70,7 @@
 											
 										</li>
 										<li>
-											<a href="pricing.html">Membership</a>
+											<a href="about.html">About Us</a>
 											
 										</li>
 										<li>
@@ -155,16 +101,6 @@
 
 								</nav>
 								<!-- eof main nav -->
-						</div>
-						<div class="col-xl-2 col-lg-3 text-right d-none d-xl-block">
-
-							<ul class="top-includes">
-
-
-
-
-							</ul>
-
 						</div>
 					</div>
 				</div>
