--- a/aboutt.html
+++ b/aboutt.html
@@ -7,7 +7,6 @@
 <!--<![endif]-->
 
 
-<!-- Mirrored from html.modernwebtemplates.com/okorner/contact2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 11 May 2025 19:04:57 GMT -->
 <head>
 	<title>Okorner - HTML Template</title>
 	<meta charset="utf-8">
@@ -650,13 +649,16 @@
 						<div class="divider-45"></div>
 
 						<div class="col-md-12 text-center">
-							<h1 class="bold">Contact</h1>
+							<h1 class="bold">About </h1>
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item">
 									<a href="index-2.html">Home</a>
 								</li>
+								<li class="breadcrumb-item">
+									<a href="#">Pages</a>
+								</li>
 								<li class="breadcrumb-item active">
-									Contact Us
+									About
 								</li>
 							</ol>
 						</div>
@@ -666,137 +668,271 @@
 					</div>
 				</div>
 			</section>
+			<section class="ds s-py-60 s-py-md-90 s-overlay mobile-overlay about-section">
+				<div class="container">
+					<div class="row d-flex justify-content-end">
+						<div class="divider-70 d-none d-xl-block"></div>
+						<div class="col-md-12 col-xl-6 ">
+							<h3 class="special-heading text-lg-left text-center">about <span class="color-main">fight</span> school</h3>
+							<div class="divider-40 d-none d-xl-block"></div>
+							<p class="excerpt text-lg-left text-center">Fight School has specialized in martial arts since 1986 and has one of the most innovative programs in the nation.</p>
+							<p class="text-lg-left text-center">
+								We teach martial arts because we love it — not because we want to make money on you. Unlike other martial arts schools, we do not require you to sign long term contracts.
+								You just pay one low monthly fee for your martial arts and self defense classes at the beginning of each month. Many martial arts...
+								<a class="about-link" href="about.html">
+									read more <i class="fa fa-level-down" aria-hidden="true"></i>
+								</a>
+							</p>
 
-			<section class="ds s-pt-50 s-pb-30 s-pb-md-90 c-mb-20 c-mb-xl-20">
+							<div class="signature">
+								<div class="signature__left">
+									<h5>Aiden Richards</h5>
+									<span>DIRECTOR / INSTRUCTOR</span>
+								</div>
+								<div class="signature__right">
+									<img src="images/signature.png" alt="signature">
+								</div>
+							</div>
+						</div>
+						<div class="divider-60 d-none d-xl-block"></div>
+					</div>
+				</div>
+			</section>
+			<section class="ds ms s-py-60 s-py-md-90 s-overlay team-section">
 				<div class="container">
 					<div class="row">
-
-						<div class="divider-40 d-none d-xl-block"></div>
-
-						<div class="col-lg-12 col-xl-8">
-							<h4 class="text-left mb-40">
-								Contact Form
-							</h4>
-							<form class="contact-form c-mb-20 c-gutter-20" method="post" action="https://html.modernwebtemplates.com/">
-
-								<div class="row">
-
-									<div class="col-sm-6">
-										<div class="form-group has-placeholder">
-											<label for="name">Full Name <span class="required">*</span></label>
-											<input type="text" aria-required="true" size="30" value="" name="name" id="name" class="form-control" placeholder="Full Name">
+						<div class="divider-70 d-none d-xl-block"></div>
+						<div class="col-12">
+							<h3 class="special-heading text-center">OUR INSTRUCTORS</h3>
+							<div class="divider-60 d-none d-xl-block"></div>
+							<div class="divider-40 hidden-above-md"></div>
+							<div class="owl-carousel" data-loop="true" data-margin="30" data-nav="true" data-dots="true" data-center="false" data-items="1" data-autoplay="true" data-responsive-xs="1" data-responsive-sm="2" data-responsive-md="3" data-responsive-lg="3">
+								<div class="vertical-item box-shadow content-padding text-center">
+									<div class="item-media">
+										<img src="images/team/01.jpg" alt="">
+										<div class="media-links">
+											<a class="abs-link" title="" href="team-single.html"></a>
 										</div>
 									</div>
+									<div class="item-content">
+										<h5>
+											<a href="team-single.html">Randall Schwartz</a>
+										</h5>
 
-									<div class="col-sm-6">
-										<div class="form-group has-placeholder">
-											<label for="email">Email address<span class="required">*</span></label>
-											<input type="email" aria-required="true" size="30" value="" name="email" id="email" class="form-control" placeholder="Email Address">
-										</div>
+										<p class="small-text color-main">
+											KIDS INSTRUCTOR
+										</p>
+										<p class="social-icons">
+
+											<a href="#" class="fa fa-facebook" title="facebook"></a>
+											<a href="#" class="fa fa-twitter" title="twitter"></a>
+											<a href="#" class="fa fa-google-plus" title="google"></a>
+
+										</p>
+
 									</div>
-
-
 								</div>
-
-								<div class="row">
-
-									<div class="col-sm-6">
-										<div class="form-group has-placeholder">
-											<label for="phone">Phone<span class="required">*</span></label>
-
-											<input type="text" aria-required="true" size="30" value="" name="phone" id="phone" class="form-control" placeholder="Phone Number">
+								<div class="vertical-item box-shadow content-padding text-center">
+									<div class="item-media">
+										<img src="images/team/02.jpg" alt="">
+										<div class="media-links">
+											<a class="abs-link" title="" href="team-single.html"></a>
 										</div>
 									</div>
-									<div class="col-sm-6">
-										<div class="form-group has-placeholder">
-											<label for="subject">Subject<span class="required">*</span></label>
-											<input type="text" aria-required="true" size="30" value="" name="subject" id="subject" class="form-control" placeholder="Subject">
-										</div>
-									</div>
+									<div class="item-content">
+										<h5>
+											<a href="team-single.html">Randall Schwartz</a>
+										</h5>
 
+										<p class="small-text color-main">
+											KIDS INSTRUCTOR
+										</p>
+										<p class="social-icons">
+
+											<a href="#" class="fa fa-facebook" title="facebook"></a>
+											<a href="#" class="fa fa-twitter" title="twitter"></a>
+											<a href="#" class="fa fa-google-plus" title="google"></a>
+
+										</p>
+
+									</div>
 								</div>
-
-								<div class="row">
-
-									<div class="col-sm-12">
-
-										<div class="form-group has-placeholder">
-											<label for="message">Message</label>
-
-											<textarea aria-required="true" rows="3" cols="45" name="message" id="message" class="form-control" placeholder="Your Message"></textarea>
+								<div class="vertical-item box-shadow content-padding text-center">
+									<div class="item-media">
+										<img src="images/team/03.jpg" alt="">
+										<div class="media-links">
+											<a class="abs-link" title="" href="team-single.html"></a>
 										</div>
 									</div>
+									<div class="item-content">
+										<h5>
+											<a href="team-single.html">Randall Schwartz</a>
+										</h5>
 
+										<p class="small-text color-main">
+											KIDS INSTRUCTOR
+										</p>
+										<p class="social-icons">
+
+											<a href="#" class="fa fa-facebook" title="facebook"></a>
+											<a href="#" class="fa fa-twitter" title="twitter"></a>
+											<a href="#" class="fa fa-google-plus" title="google"></a>
+
+										</p>
+
+									</div>
 								</div>
-
-								<div class="row">
-
-									<div class="col-sm-12 text-left">
-
-										<div class="form-group">
-											<button type="submit" id="contact_form_submit" name="contact_submit" class="btn btn-maincolor">Send Now
-											</button>
+								<div class="vertical-item box-shadow content-padding text-center">
+									<div class="item-media">
+										<img src="images/team/01.jpg" alt="">
+										<div class="media-links">
+											<a class="abs-link" title="" href="team-single.html"></a>
 										</div>
 									</div>
+									<div class="item-content">
+										<h5>
+											<a href="team-single.html">Randall Schwartz</a>
+										</h5>
 
+										<p class="small-text color-main">
+											KIDS INSTRUCTOR
+										</p>
+										<p class="social-icons">
+
+											<a href="#" class="fa fa-facebook" title="facebook"></a>
+											<a href="#" class="fa fa-twitter" title="twitter"></a>
+											<a href="#" class="fa fa-google-plus" title="google"></a>
+
+										</p>
+
+									</div>
 								</div>
+								<div class="vertical-item box-shadow content-padding text-center">
+									<div class="item-media">
+										<img src="images/team/02.jpg" alt="">
+										<div class="media-links">
+											<a class="abs-link" title="" href="team-single.html"></a>
+										</div>
+									</div>
+									<div class="item-content">
+										<h5>
+											<a href="team-single.html">Randall Schwartz</a>
+										</h5>
 
-							</form>
+										<p class="small-text color-main">
+											KIDS INSTRUCTOR
+										</p>
+										<p class="social-icons">
+
+											<a href="#" class="fa fa-facebook" title="facebook"></a>
+											<a href="#" class="fa fa-twitter" title="twitter"></a>
+											<a href="#" class="fa fa-google-plus" title="google"></a>
+
+										</p>
+
+									</div>
+								</div>
+								<div class="vertical-item box-shadow content-padding text-center">
+									<div class="item-media">
+										<img src="images/team/03.jpg" alt="">
+										<div class="media-links">
+											<a class="abs-link" title="" href="team-single.html"></a>
+										</div>
+									</div>
+									<div class="item-content">
+										<h5>
+											<a href="team-single.html">Randall Schwartz</a>
+										</h5>
+
+										<p class="small-text color-main">
+											KIDS INSTRUCTOR
+										</p>
+										<p class="social-icons">
+
+											<a href="#" class="fa fa-facebook" title="facebook"></a>
+											<a href="#" class="fa fa-twitter" title="twitter"></a>
+											<a href="#" class="fa fa-google-plus" title="google"></a>
+
+										</p>
+
+									</div>
+								</div>
+							</div>
 						</div>
-						<div class="col-lg-12 col-xl-4">
-							<h4 class="text-left mb-40">
-								Contact Info
-							</h4>
-							<ul class="list-unstyled">
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main">
-											<i class="fa fa-map-marker"></i>
-										</span>
-
-										<span>
-											Ramayan Apartment SRA CHS LTD, Babrekar Nagar, Kandivali West, Mumbai, Maharashtra 400067
-										</span>
-									</span>
-								</li>
-
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main">
-											<i class="fa fa-phone"></i>
-										</span>
-
-										<span>
-											+91-98920-89106
-										</span>
-									</span>
-								</li>
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main">
-											<i class="fa fa-envelope"></i>
-										</span>
-
-										<span>
-											<a href="mail:rajumore161@gmail.com" class="__cf_email__">rajumore161@gmail.com</a>
-										</span>
-									</span>
-								</li>
-								<li>
-									<span class="icon-inline">
-										<span class="icon-styled color-main">
-											<i class="fa fa-clock-o"></i>
-										</span>
-
-										<span>
-											Working Hours: Daily 9 am - 8 pm
-										</span>
-									</span>
-								</li>
-							</ul>
+						<div class="divider-70 d-none d-xl-block"></div>
+					</div>
+				</div>
+			</section>
+			<section class="ds s-py-60 s-py-md-90 testimonials-section">
+				<div class="container">
+					<div class="row">
+						<div class="divider-70 d-none d-xl-block"></div>
+						<div class="col-12">
+							<h3 class="special-heading text-center">what clients say</h3>
+							<div class="divider-60 d-none d-xl-block"></div>
+							<div class="owl-carousel" data-loop="false" data-margin="30" data-nav="true" data-dots="true" data-center="false" data-items="1" data-autoplay="false" data-responsive-xs="1" data-responsive-sm="1" data-responsive-md="1" data-responsive-lg="1">
+								<div class="vertical-item testimonial-item box-shadow content-padding text-center">
+									<blockquote class="quote-item">
+										<div class="quote-image">
+											<img src="images/team/testimonials_01.jpg" alt="">
+										</div>
+										<h5>Clifford Carter</h5>
+										<p class="small-text color-main">
+											VISITORS / BUSINESSMAN
+										</p>
+										<p>
+											Pork belly shankle brisket pig swine sausage landjaeger tri-tip drumstick kielbasa burgdoggen pork chop prosciutto rump ground round. Andouille ribeye chicken swine. Biltong rump venison.
+										</p>
+										<i class="fa fa-quote-right" aria-hidden="true"></i>
+									</blockquote>
+								</div>
+								<div class="vertical-item testimonial-item box-shadow content-padding text-center">
+									<blockquote class="quote-item">
+										<div class="quote-image">
+											<img src="images/team/testimonials_04.jpg" alt="">
+										</div>
+										<h5>Clifford Carter</h5>
+										<p class="small-text color-main">
+											VISITORS / BUSINESSMAN
+										</p>
+										<p>
+											Pork belly shankle brisket pig swine sausage landjaeger tri-tip drumstick kielbasa burgdoggen pork chop prosciutto rump ground round. Andouille ribeye chicken swine. Biltong rump venison.
+										</p>
+										<i class="fa fa-quote-right" aria-hidden="true"></i>
+									</blockquote>
+								</div>
+								<div class="vertical-item testimonial-item box-shadow content-padding text-center">
+									<blockquote class="quote-item">
+										<div class="quote-image">
+											<img src="images/team/testimonials_02.jpg" alt="">
+										</div>
+										<h5>Clifford Carter</h5>
+										<p class="small-text color-main">
+											VISITORS / BUSINESSMAN
+										</p>
+										<p>
+											Pork belly shankle brisket pig swine sausage landjaeger tri-tip drumstick kielbasa burgdoggen pork chop prosciutto rump ground round. Andouille ribeye chicken swine. Biltong rump venison.
+										</p>
+										<i class="fa fa-quote-right" aria-hidden="true"></i>
+									</blockquote>
+								</div>
+								<div class="vertical-item testimonial-item box-shadow content-padding text-center">
+									<blockquote class="quote-item">
+										<div class="quote-image">
+											<img src="images/team/testimonials_03.jpg" alt="">
+										</div>
+										<h5>Clifford Carter</h5>
+										<p class="small-text color-main">
+											VISITORS / BUSINESSMAN
+										</p>
+										<p>
+											Pork belly shankle brisket pig swine sausage landjaeger tri-tip drumstick kielbasa burgdoggen pork chop prosciutto rump ground round. Andouille ribeye chicken swine. Biltong rump venison.
+										</p>
+										<i class="fa fa-quote-right" aria-hidden="true"></i>
+									</blockquote>
+								</div>
+							</div>
 						</div>
-
-						<div class="divider-60 d-none d-xl-block"></div>
 
 					</div>
 				</div>
@@ -891,16 +1027,12 @@
 	</div><!-- eof #canvas -->
 
 
-	<script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/compressed.js"></script>
+	<script src="js/compressed.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/switcher.js"></script>
-
-	<!-- Google Map Script -->
-
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?callback=templateInitGoogleMap&amp;key=AIzaSyC0pr5xCHpaTGv12l73IExOHDJisBP2FK4"></script>
 
 </body>
 
 
-<!-- Mirrored from html.modernwebtemplates.com/okorner/contact2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 11 May 2025 19:04:57 GMT -->
+<!-- Mirrored from html.modernwebtemplates.com/okorner/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 11 May 2025 19:03:40 GMT -->
 </html>
