competition and forms

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 											
 										</li>
 										<li>
-											<a href="#">Competitions</a>
+											<a href="competition.html">Competitions</a>
 							
 										</li>
 										<!-- eof features -->
@@ -205,6 +205,54 @@
 									</div>
 
 								</div>
+								<div style="text-align: center; margin-top: 30px;">
+  <!-- Download Button 1 -->
+  <style>
+.download-btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  margin: 10px;
+  padding: 14px 24px;
+  background: linear-gradient(135deg, #ff5a3c, #ff7b5c);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 50px;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+  transition: all 0.3s ease;
+}
+
+.download-btn.blue {
+  background: linear-gradient(135deg, #007bff, #3399ff);
+}
+
+.download-btn:hover {
+  transform: translateY(-3px) scale(1.05);
+  box-shadow: 0 6px 15px rgba(0,0,0,0.25);
+}
+
+.download-btn i {
+  font-size: 18px;
+}
+</style>
+
+<div style="text-align:center; margin-top:30px;">
+  <!-- Download Button 1 -->
+  <a href="images/dan.jpeg" download="Application_for_Dan_Registration.jpg" class="download-btn">
+    <i>📥</i> Application for Dan Registration
+  </a>
+
+  <!-- Download Button 2 -->
+  <a href="images/affilation.jpeg" download="Application_form_for_Affiliation.jpg" class="download-btn blue">
+    <i>📥</i> Application form for Affiliation
+  </a>
+</div>
+
+</div>
+
 
 							</form>
 						</div>
