--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 											
 										</li>
 										<li>
-											<a href="#">Competitions</a>
+											<a href="competition.html">Competitions</a>
 							
 										</li>
 										<!-- eof features -->
