--- a/contact.html
+++ b/contact.html
@@ -211,15 +211,13 @@
   display: inline-flex;
   align-items: center;
   gap: 8px;
-  margin: 10px;
+  margin: 30px;
   padding: 14px 24px;
 background-color: #e43d4e;  
   color: #fff !important;
   text-decoration: none;
-  border-radius: 50px;
-  font-family: "Poppins", sans-serif;
-  font-size: 15px;
-  font-weight: 500;
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
   transition: all 0.3s ease;
 }
@@ -238,15 +236,17 @@ background-color: #e43d4e;
   color: #fff !important; /* keep text white */
 }
 </style>
+<!-- Font Awesome 6 CDN -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
 
   <!-- Download Button 1 -->
   <a href="images/dan.jpeg" download="Application_for_Dan_Registration.jpg" class="download-btn">
-    <i>📥</i> Application for Dan Registration
+    Application form for Dan Registration <i class="fa-solid fa-download"></i>
   </a>
 
   <!-- Download Button 2 -->
   <a href="images/affilation.jpeg" download="Application_form_for_Affiliation.jpg" class="download-btn blue">
-    <i>📥</i> Application form for Affiliation
+    Application form for Affiliation <i class="fa-solid fa-download"></i>
   </a>
 </div>
 
