--- a/contact.html
+++ b/contact.html
@@ -288,7 +288,7 @@ background-color: #e43d4e;
 										</span>
 
 										<span>
-											<a href="mail:rajumore161@gmail.com" class="__cf_email__">rajumore161@gmail.com</a>
+											<a href="mailto:rajumore161@gmail.com" class="__cf_email__">rajumore161@gmail.com</a>
 										</span>
 									</span>
 								</li>
