--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
 							<h3 class="special-heading text-lg-left text-center">About <span class="color-main">Us</span></h3>
                             <h6>Funakoshi’s (Shotokan)</h6>
 							<ul class="list-styled">
-                                <p>All India Shotokan Karate youth Association - SKYA We are genuine and internationally recognized Shotokan
+                                <p>Shotokan Karate youth Association - SKYA We are genuine and internationally recognized Shotokan
 Karate institute of India which is affiliated and authorized Membership under Japan International Traditional
 Shotokan Karate Federation (Osaka Japan) International (JITSKF) which is headed by SOKEAHMAD AL HASANI
 (10TH DAN).
