--- a/competition.html
+++ b/competition.html
@@ -115,7 +115,7 @@
 						<div class="divider-45"></div>
 
 						<div class="col-md-12 text-center">
-							<h1 class="bold">Competitions</h1>
+							<h1 class="bold">Competition</h1>
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item">
 									<a href="index.html">Home</a>
