--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Our association promotes a positive, professional and friendly environment, allo
 							<div class="signature">
 								<div class="signature__left">
 									<h5>RAJU MORE</h5>
-									<span>DIRECTOR / INSTRUCTOR</span>
+									<span>FOUNDER/PRESIDENT</span>
 								</div>
 							</div>
 						</div>
